filename case senstive typo

--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
                 </div>
 
                 <div class="work-img tokyo-3">
-                    <a href="./assets/images/tokyo3.JPG" target="blank">
-                    <img src="./assets/images/tokyo3.JPG" alt="daytime traffic"> 
+                    <a href="./assets/images/tokyo3.jpg" target="blank">
+                    <img src="./assets/images/tokyo3.jpg" alt="daytime traffic"> 
                     Tokyo 3 </a>
                     <p>
                         Daytime roads of Tokyo
