media query update

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="nav-links">
             <h1>
                 <!-- logo/home link -->
-                <a href="/">nathalie c.</a>
+                <a href="./index.html">nathalie c.</a>
             </h1>
             <ul class="main-menu">
                 <!-- link to my "about me" section -->
