appropriate comments added

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <h3>Website</h3>
  
             <article class="sites">
-                <div class="work-img work-1">
+                <div class="sites-img work-1">
                     <a href="https://natswatch.github.io/run-buddy" a target="_blank">
                     <img src="./assets/images/Run-buddy-logo.jpg" alt= "Run Buddy site snapshot"/>
                     Run Buddy </a>
@@ -139,6 +139,7 @@
         <section id="contact-info" class="contact-info">
 
             <article class="contact">
+                <!-- social links -->
                 <div class="follow">
                     <h3>follow me </h3>
                     <div>
@@ -155,7 +156,7 @@
                     </div>
                 </div>
 
-
+                <!-- email info -->
                 <div class="write">
                     <h3>write me </h3>
                     <div>
